--- a/List.html
+++ b/List.html
@@ -13,7 +13,7 @@
 <h3> My Favorite Movies </h3>
 <ol>
     <li> The last 30 Minutes of Forrest Gump (<a href="JMDB"></a>)</li>
-    <li> Star trek episode V with Zazu (<a href="IMDB"></a></li>
+    <li> Star trak episode V with Zazu (<a href="IMDB"></a></li>
 </ol>
 </head>
 </html>
